# capstone-project

./: .env.example  .gitignore  CLAUDE.md  README.md  architecture.mmd  architecture_agent_workflow.mmd  architecture_background_sync_flow.mmd  architecture_deployment.mmd  architecture_question_answering_flow.mmd  architecture_system_components.mmd  docker-compose.yml  pyproject.toml
.claude/skills/database-patterns/: SKILL.md
.claude/skills/fastapi-patterns/: SKILL.md
.claude/skills/langgraph-patterns/: SKILL.md
.claude/skills/memory-service/: SKILL.md
.claude/skills/rag-pipeline/: SKILL.md
api/: Dockerfile  pyproject.toml
api/src/hr_chatbot_api/: __init__.py  main.py  models.py
api/src/hr_chatbot_api/agents/: __init__.py  agent_state.py  graph.py
api/src/hr_chatbot_api/routers/: __init__.py  chat.py  setup.py
api/src/hr_chatbot_api/services/: __init__.py  memory_service.py
architecture/: API_CONTRACTS.md  ARCHITECTURE.md  CODING_STANDARDS.md
background-job/: Dockerfile  pyproject.toml
background-job/src/sync/: __init__.py  main.py
evaluation/: Dockerfile  README.md  pyproject.toml
evaluation/datasets/: eval_dataset.example.json
evaluation/src/hr_chatbot_eval/: __init__.py  __main__.py  config.py  dataset_validator.py  retrieval_metrics.py  runner.py
shared/config/: pyproject.toml
shared/config/src/hr_chatbot_config/: __init__.py
shared/config/tests/: test_config.py
shared/rag-pipeline/: pyproject.toml
shared/rag-pipeline/src/rag_pipeline/: __init__.py  chunker_service.py  confluence_client.py  models.py  rag_pipeline.py
shared/rag-pipeline/tests/: __init__.py  test_models.py
