[project]
name = "hr-chatbot-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "hr-chatbot-config",
    "rag-pipeline",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.20",
]

[tool.uv.sources]
hr-chatbot-config = { workspace = true }
rag-pipeline = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
